--- a/txlcn-tm/pom.xml
+++ b/txlcn-tm/pom.xml
@@ -61,6 +61,19 @@
     <!-- deploy 注释掉下 -->
     <build>
         <plugins>
+            <plugin>
+                            <groupId>org.springframework.boot</groupId>
+                            <artifactId>spring-boot-maven-plugin</artifactId>
+                            <executions>
+                                <execution>
+                                    <goals>
+                                        <goal>repackage</goal>
+                                    </goals>
+                                </execution>
+                            </executions>
+                            <inherited>true</inherited>
+                        </plugin>
+
             <!--<plugin>-->
                 <!--<groupId>org.apache.maven.plugins</groupId>-->
                 <!--<artifactId>maven-jar-plugin</artifactId>-->
